feat: add popup with warrier

--- a/index.html
+++ b/index.html
@@ -17,19 +17,6 @@
     />
   </head>
   <body>
-    <!-- <video
-      autoplay
-      muted
-      loop
-      id="myVideo"
-    >
-      <source
-        src="./assets/stars.mp4"
-        type="video/mp4"
-      />
-      Your browser does not support HTML5 video.
-    </video> -->
-
     <header>
       <div class="logo"
         ><img
@@ -43,6 +30,7 @@
       <div class="people"></div>
       <div class="personCard hidden"></div>
     </main>
+    <div class="overlay hidden"></div>
   </body>
   <script src="./script.js"></script>
 </html>
