feat: add pagination

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
     <main>
       <button class="show">Show people</button>
+      <div class="pagination"></div>
       <div class="people"></div>
       <div class="personCard hidden"></div>
     </main>
